[gd_scene load_steps=4 format=3 uid="uid://u27yvn5ryq72"]

[ext_resource type="Script" uid="uid://jregw1v4rjv6" path="res://Scripts/Debuff/debuff_spine.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bl6k27whdfde6" path="res://Resources/Art/Background/LIST_NOTE.png" id="2_texture"]
[ext_resource type="FontFile" uid="uid://d30iuqvbxs6im" path="res://Resources/Font/VCR_OSD_MONO_1.001.ttf" id="3_no30s"]

[node name="DebuffSpine" type="Control"]
custom_minimum_size = Vector2(100, 130)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 130.0
mouse_filter = 1
script = ExtResource("1_script")
list_note_texture = ExtResource("2_texture")

[node name="SpineRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_texture")
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 15.0
offset_right = 40.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "DEBUFFS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_no30s")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
